http://www.nabble.com/-Vote--Release-axistools-maven-plugin-1.2-td20802058.html: add versions
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/axistools-maven-plugin@8206 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/site/apt/examples/simple.apt.vm
+++ b/src/site/apt/examples/simple.apt.vm
@@ -19,6 +19,7 @@ Example:
             <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>axistools-maven-plugin</artifactId>
+               <version>${project.version}</version>
                <configuration>
                   <urls>
                   	<url>http://host/server/sample.wsdl</url>
