--- a/src/site/apt/usage.apt.vm
+++ b/src/site/apt/usage.apt.vm
@@ -135,7 +135,9 @@ Notes:
   
 ------------
   <plugin>
+  	<groupId>org.codehaus.mojo</groupId>
     <artifactId>axistools-maven-plugin</artifactId>
+    <version>${project.version}</version>
 	<dependencies>
 	  <dependency>
 		<groupId>axis</groupId>
