MASPECTJ-65: wrong groupId for aspectj in docs
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/aspectj-maven-plugin@9340 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/site/apt/differentTestAndCompile.apt.vm
+++ b/src/site/apt/differentTestAndCompile.apt.vm
@@ -9,7 +9,7 @@ Example of different configuration for compile and test-compile goal
     <dependencies>
         ...
         <dependency>
-            <groupId>aspectj</groupId>
+            <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
             <version>1.6.2</version>
         </dependency>
