Use a property for the version of AspectJ dependencies.
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/aspectj-maven-plugin@14233 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/site/apt/differentTestAndCompile.apt.vm
+++ b/src/site/apt/differentTestAndCompile.apt.vm
@@ -11,7 +11,7 @@ Example of different configuration for compile and test-compile goal
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
-            <version>1.6.2</version>
+            <version>${aspectjVersion}</version>
         </dependency>
         ...
     </dependencies>
