--- a/src/site/apt/usage.apt.vm
+++ b/src/site/apt/usage.apt.vm
@@ -13,7 +13,7 @@ Usage
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
-            <version>1.6.2</version>
+            <version>${aspectjVersion}</version>
         </dependency>
         ...
     </dependencies>
