--- a/src/site/apt/libraryJars.apt.vm
+++ b/src/site/apt/libraryJars.apt.vm
@@ -12,7 +12,7 @@ Applying already compiled aspect jars,
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
-            <version>1.6.2</version>
+            <version>${aspectjVersion}</version>
         </dependency>
         
         <dependency>
