--- a/src/site/apt/weaveJars.apt.vm
+++ b/src/site/apt/weaveJars.apt.vm
@@ -13,7 +13,7 @@ Weaving already compiled jar artifacts
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
-            <version>1.6.2</version>
+            <version>${aspectjVersion}</version>
         </dependency>
         
          <dependency>
