Add title to all pages.
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/aspectj-maven-plugin@14235 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/site/apt/differentTestAndCompile.apt.vm
+++ b/src/site/apt/differentTestAndCompile.apt.vm
@@ -1,3 +1,9 @@
+ ------
+ Seperate test/compile settings
+ ------
+ ------
+ ------
+
 Example of different configuration for compile and test-compile goal
 
   To have different weaving configurations for the main and testclasses
