--- a/src/site/apt/usage.apt.vm
+++ b/src/site/apt/usage.apt.vm
@@ -1,3 +1,9 @@
+ ------
+ Usage
+ ------
+ ------
+ ------
+
 Usage
 
   This plugin weaves aspectJ aspects with your classes using the AspectJ ajc compiler.
