--- a/src/site/apt/usingTogetherWithAJDT.apt.vm
+++ b/src/site/apt/usingTogetherWithAJDT.apt.vm
@@ -1,3 +1,9 @@
+ ------
+ Using with AJDT
+ ------
+ ------
+ ------
+
 Using together with AJDT
 
   To use together with AJDT you simply spesify the ajdtBuildDefFile property to point to the
