--- a/src/site/apt/weaveJars.apt.vm
+++ b/src/site/apt/weaveJars.apt.vm
@@ -1,15 +1,16 @@
  ------
- Weaving jars
+ Weaving JARs
  ------
  ------
  ------
 
-Weaving already compiled jar artifacts
+Weaving already compiled JAR artifacts
 
-  AspectJ gives a possibility to weave already compiled classes in a jar file.
-  In order to do this with the AspectJ plugin you need do setup all the jar
+  AspectJ gives a possibility to weave already compiled classes in a JAR file.
+  In order to do this with the AspectJ Plugin you need do setup all the JAR
   files you would like to weave in the plugin configuration as shown below.
-  Note. The artifact you reference must exist as dependencies in the module.
+
+  <<Note:>> The artifacts you reference must exist as dependencies in the project.
   
 +------------------------------------------+
 <project>
@@ -60,11 +61,11 @@ Weaving already compiled jar artifacts
                             <goal>compile</goal>
                         </goals>
                     </execution>
-               </executions>
-           </plugin>
-           ...
-       </plugins>in
-   <build>
-...
+                </executions>
+            </plugin>
+            ...
+        </plugins>in
+    <build>
+    ...
 </project>
 +------------------------------------------+
