Fix MASPECTJ-95: support sources and testSources to have more control over the files to include and exclude
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/aspectj-maven-plugin@14246 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/site/apt/weaveDirectories.apt.vm
+++ b/src/site/apt/weaveDirectories.apt.vm
@@ -21,7 +21,7 @@ Weaving already compiled classes
                       <id>default-compile</id>
                       <configuration>
                           <compilerArguments>
-                              <d>${project.build.directory}/unwoven-classes</d>
+                              <d>\${project.build.directory}/unwoven-classes</d>
                           </compilerArguments>
                       </configuration>
                   </execution>
@@ -32,7 +32,7 @@ Weaving already compiled classes
                 <artifactId>aspectj-maven-plugin</artifactId>
                 <configuration>
                     <weaveDirectories>
-                        <weaveDirectory>${project.build.directory}/unwoven-classes</weaveDirectory>
+                        <weaveDirectory>\${project.build.directory}/unwoven-classes</weaveDirectory>
                     </weaveDirectories>
                 </configuration>
                 <executions>
