--- a/src/site/apt/includeExclude.apt.vm
+++ b/src/site/apt/includeExclude.apt.vm
@@ -4,6 +4,61 @@
  ------
  ------
 
+Using sources
+
+  Since aspectj-maven-plugin-1.4 the plugin has a much stronger way of defining the java sources, their includes and excludes.
+  The plugin makes use of the Plexus Scanner
+  (i.e. the {{{http://plexus.codehaus.org/plexus-utils/apidocs/org/codehaus/plexus/util/DirectoryScanner.html}DirectoryScanner}} implementation), 
+  an advanced implementation which covers all the needs.
+
++------------------------------------------+
+<project>
+  ...
+  <dependencies>
+    ...
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjrt</artifactId>
+      <version>${aspectjVersion}</version>
+    </dependency>
+    ...
+  </dependencies>
+  ...
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>aspectj-maven-plugin</artifactId>
+        <version>${project.version}</version>
+        <configuration>
+          <sources>
+            <source>
+              <basedir>src/main/java</basedir>
+              <includes>
+                <include>**/TransationAspect.java</include>
+                <include>**/SecurityAspect.aj</include>
+              </includes>
+              <excludes>
+                <exclude>**/logging/*.aj</exclude>
+              </excludes>
+            </source>
+          </sources>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>compile</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      ...
+    </plugins>
+  <build>
+  ...
+</project>
++------------------------------------------+  
+
 Using includes/excludes
 
   The AspectJ plugin will by default add all .java and .aj files in the
