Adjust Scanner usage for M2. Somehow Plexus seems to have trouble to initialize those Array objects as wished.
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/aspectj-maven-plugin@14321 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/site/apt/includeExclude.apt.vm
+++ b/src/site/apt/includeExclude.apt.vm
@@ -10,6 +10,8 @@ Using sources
   The plugin makes use of the Plexus Scanner
   (i.e. the {{{http://plexus.codehaus.org/plexus-utils/apidocs/org/codehaus/plexus/util/DirectoryScanner.html}DirectoryScanner}} implementation), 
   an advanced implementation which covers all the needs.
+  If you don't want to use any sourceDirectory, Maven3 users can just add an empty sources tag(i.e. \<sources/\>). 
+  If you're a Maven2 users you have to specify an empty source (i.e. \<sources\>\<source/\>\</sources\>).
 
 +------------------------------------------+
 <project>
