--- a/src/site/apt/usingReport.apt.vm
+++ b/src/site/apt/usingReport.apt.vm
@@ -9,7 +9,7 @@ Configuring AspectJ report
 
   Example of ajdoc report creation. 
   
-  <<Note:>> Since this report is using tools.jar as a system scoped dependency
+  <<Note:>> Since this report is using <<<tools.jar>>> as a system scoped dependency
   you will need to make sure that your JAVA_HOME environment variable 
   are set to a JDK, before you could use this report.
   Also we discovered that it does not work with JDK 1.5.0, and you would
@@ -17,39 +17,39 @@ Configuring AspectJ report
   
 +------------------------------------------+
 <project>
+  ...
+  <dependencies>
     ...
-    <dependencies>
-        ...
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjrt</artifactId>
-            <version>${aspectjVersion}</version>
-            <scope>compile</scope>
-        </dependency>
-        ...
-    </dependencies>
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjrt</artifactId>
+      <version>${aspectjVersion}</version>
+      <scope>compile</scope>
+    </dependency>
     ...
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>aspectj-maven-plugin</artifactId>
-                <version>${project.version}</version>
-                <configuration>
-                    <verbose>true</verbose>
-                    <privateScope>true</privateScope>
-                    <complianceLevel>1.5</complianceLevel>
-                    <ajdtBuildDefFile>build.ajproperties</ajdtBuildDefFile>
-                </configuration>
-               <reportSets> 
-                   <reportSet>
-                       <reports>
-                           <report>aspectj-report</report>
-                       </reports>
-                   </reportSet>
-               </reportSets>
-           </plugin>
-        </plugins>
-    </reporting>
-    ...
+  </dependencies>
+  ...
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>aspectj-maven-plugin</artifactId>
+        <version>${project.version}</version>
+        <configuration>
+          <verbose>true</verbose>
+          <privateScope>true</privateScope>
+          <complianceLevel>1.5</complianceLevel>
+          <ajdtBuildDefFile>build.ajproperties</ajdtBuildDefFile>
+        </configuration>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <report>aspectj-report</report>
+            </reports>
+          </reportSet>
+        </reportSets>
+      </plugin>
+    </plugins>
+  </reporting>
+  ...
 </project>
