--- a/src/site/apt/includeExclude.apt.vm
+++ b/src/site/apt/includeExclude.apt.vm
@@ -6,12 +6,12 @@
 
 Using sources
 
-  Since aspectj-maven-plugin-1.4 the plugin has a much stronger way of defining the java sources, their includes and excludes.
+  Since version 1.4 this plugin has a much stronger way of defining the Java sources, their includes and excludes.
   The plugin makes use of the Plexus Scanner
   (i.e. the {{{http://plexus.codehaus.org/plexus-utils/apidocs/org/codehaus/plexus/util/DirectoryScanner.html}DirectoryScanner}} implementation), 
   an advanced implementation which covers all the needs.
-  If you don't want to use any sourceDirectory, Maven3 users can just add an empty sources tag(i.e. \<sources/\>). 
-  If you're a Maven2 users you have to specify an empty source (i.e. \<sources\>\<source/\>\</sources\>).
+  If you don't want to use any sourceDirectory, Maven 3 users can just add an empty sources element (i.e. \<sources/\>).
+  If you're a Maven 2 user you have to specify an empty source element (i.e. \<sources\>\<source/\>\</sources\>).
 
 +------------------------------------------+
 <project>
@@ -63,49 +63,49 @@ Using sources
 
 Using includes/excludes
 
-  The AspectJ plugin will by default add all .java and .aj files in the
+  The AspectJ Plugin will by default add all .java and .aj files in the
   project source directories. Below you will find an example of how
-  to add an include/exclude filtering on top of that.
+  to add include/exclude filtering on top of that.
 
 +------------------------------------------+
 <project>
+  ...
+  <dependencies>
     ...
-    <dependencies>
-        ...
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjrt</artifactId>
-            <version>${aspectjVersion}</version>
-        </dependency>
-        ...
-    </dependencies>
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjrt</artifactId>
+      <version>${aspectjVersion}</version>
+    </dependency>
     ...
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>aspectj-maven-plugin</artifactId>
-                <version>${project.version}</version>
-                <configuration>
-                    <includes>
-                        <include>**/TransationAspect.java</include>
-                        <include>**/SecurityAspect.aj</include>
-                    </includes>
-                    <excludes>
-                        <exclude>**/logging/*.aj</exclude>
-                    </excludes>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            ...
-        </plugins>in
-    <build>
-    ...
+  </dependencies>
+  ...
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>aspectj-maven-plugin</artifactId>
+        <version>${project.version}</version>
+        <configuration>
+          <includes>
+            <include>**/TransationAspect.java</include>
+            <include>**/SecurityAspect.aj</include>
+          </includes>
+          <excludes>
+            <exclude>**/logging/*.aj</exclude>
+          </excludes>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>compile</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      ...
+    </plugins>
+  <build>
+  ...
 </project>
 +------------------------------------------+
