Fix for MASPECTJ-106: Compiler warning with aspectj-maven-plugin: expected 1.6.11 found 1.6.12 Document how to upgrade AspectJ
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/aspectj-maven-plugin@18211 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/site/apt/usage.apt.vm
+++ b/src/site/apt/usage.apt.vm
@@ -11,7 +11,7 @@ Usage
   and ultimately to run your code. To have the plugin compile aspects found in your project source directories
   simply use the configuration below.
 
-+------------------------------------------+
++------------------------------------------
 <project>
   ...
   <dependencies>
@@ -44,4 +44,47 @@ Usage
   <build>
   ...
 </project>
-+------------------------------------------+
++------------------------------------------
+
+* Upgrading AspectJ
+
+  The frequency of releases of the aspectj-maven-plugin is lower than AspectJ. 
+  If you want to use a different version of AspectJ than ${aspectjVersion}, you also need to upgrade the aspectjtools within the plugin too.
+
++------------------------------------------
+<project>
+  ...
+  <properties>
+    <aspectj.version>1.7.n</aspectj.version> <!-- specify your version -->
+  </properties>
+  
+  <dependencies>
+    ...
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjrt</artifactId>
+      <version>${aspectj.version}</version>
+    </dependency>
+    ...
+  </dependencies>
+  ...
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>aspectj-maven-plugin</artifactId>
+        <version>${project.version}</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjtools</artifactId>
+            <version>${aspectj.version}</version>
+          </dependency>
+        <dependencies>
+      </plugin>
+      ...
+    </plugins>
+  <build>
+  ...
+</project>
++------------------------------------------
