--- a/src/site/apt/multimodule/multimodule_strategy.apt.vm
+++ b/src/site/apt/multimodule/multimodule_strategy.apt.vm
@@ -426,8 +426,8 @@ public class ValidationAspect {
                         <version>${aspectj.runtime.version}</version>
                     </dependency>
                     <dependency>
-                        <groupId>se.jguru.nazgul.tools.validation.aspect</groupId>
-                        <artifactId>nazgul-tools-validation-aspect</artifactId>
+                        <groupId>some.group.id</groupId>
+                        <artifactId>validation-aspect</artifactId>
                         <version>1.0.0-SNAPSHOT</version>
                     </dependency>
                 </dependencies>
